# memorylens

./: .gitignore  LICENSE  README.md  memorylens-monetization.md  memorylens-technical-documentation.docx  memorylens-technical-documentation.html  memorylens_prd.docx  memorylens_prd.html  pyproject.toml
.github/workflows/: javascript.yml  python.yml
docs/: index.html  instrumentation-spec-v1.md
js/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/src/: context.ts  index.ts  processor.ts  sampler.ts  tracer.ts  types.ts  wrappers.ts
js/tests/: context.test.ts  processor.test.ts  sampler.test.ts  tracer.test.ts  types.test.ts  wrappers.test.ts
src/memorylens/: __init__.py  testing.py
tests/: conftest.py  test_e2e.py  test_testing.py
tests/test_alerts/: test_evaluator.py  test_storage.py  test_webhook.py
tests/test_audit/: test_analyzer.py  test_scorer.py  test_splitter.py  test_storage.py
tests/test_auth/: test_keys.py  test_middleware.py  test_permissions.py  test_sharing.py  test_storage.py
tests/test_cli/: test_alerts_commands.py  test_audit_commands.py  test_auth_commands.py  test_commands.py  test_cost_commands.py  test_drift_commands.py  test_validate.py
tests/test_core/: test_context.py  test_decorators.py  test_processor.py  test_schema.py  test_span.py  test_tracer.py
tests/test_cost/: test_enricher.py  test_pricing.py  test_storage.py
tests/test_dashboards/: test_dashboard_json.py  test_export.py
tests/test_drift/: test_analyzer.py  test_cached_scorer.py  test_health.py  test_storage.py  test_tracker.py
tests/test_exporters/: test_jsonl.py  test_otlp.py  test_sqlite.py
tests/test_integrations/: test_langchain.py  test_letta.py  test_llamaindex.py  test_mem0.py  test_zep.py
tests/test_ui/: test_api_admin.py  test_api_alerts.py  test_api_auth.py  test_api_compression.py  test_api_drift.py  test_api_ingest.py  (+3 more)
(+114 files in other folders)
