[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorylens"
version = "0.1.0"
description = "Observability and debugging for AI agent memory systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MemoryLens Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
mem0 = ["mem0ai>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
letta = ["letta-client>=0.1"]
zep = ["zep-python>=2.0"]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]
audit = ["sentence-transformers>=2.0", "numpy>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "numpy>=1.24",
]

[project.scripts]
memorylens = "memorylens.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/memorylens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
